fix button wrap

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ p {
 .buttons {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 button {
@@ -61,7 +62,8 @@ button {
     border: none;
     border-radius: 10px;
     padding: 15px;
-    width: 150px;
+    width: 200px;
+    margin: 10px 0;
 }
 
 button a {
